--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "ejs": "~0.8.5",
     "express": "~4.9.0",
     "mongodb": "*",
+    "monk": "*",
     "morgan": "~1.3.0",
     "multer": "^0.1.6",
     "node-tesseract": "^0.2.6",
