--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "express": "~4.9.0",
+    "gm": "^1.17.0",
+    "googlemaps": "^0.1.20",
     "mongodb": "*",
     "monk": "*",
     "morgan": "~1.3.0",
