MONGO OUT FIREBASE IN

--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "express": "~4.9.0",
+    "firebase": "^2.0.3",
     "gm": "^1.17.0",
     "googlemaps": "^0.1.20",
-    "mongodb": "*",
     "monk": "*",
     "morgan": "~1.3.0",
     "multer": "^0.1.6",
