--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "multer": "^0.1.6",
     "node-tesseract": "^0.2.6",
     "nodemon": "^1.2.1",
+    "react": "^0.12.0",
     "serve-favicon": "~2.1.3"
   }
 }
