--- a/package.json
+++ b/package.json
@@ -7,14 +7,16 @@
   },
   "dependencies": {
     "body-parser": "~1.8.1",
+    "consolidate": "^0.10.0",
     "cookie-parser": "~1.3.3",
     "debug": "~2.0.0",
     "ejs": "~0.8.5",
     "express": "~4.9.0",
+    "express-handlebars": "^1.1.0",
     "firebase": "^2.0.3",
     "gm": "^1.17.0",
     "googlemaps": "^0.1.20",
-    "monk": "*",
+    "handlebars": "^2.0.0",
     "morgan": "~1.3.0",
     "multer": "^0.1.6",
     "node-tesseract": "^0.2.6",
