simple session implementation

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "ejs": "~0.8.5",
     "express": "~4.9.0",
     "express-handlebars": "^1.1.0",
+    "express-session": "^1.9.1",
     "firebase": "^2.0.3",
     "gm": "^1.17.0",
     "googlemaps": "^0.1.20",
