--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express-handlebars": "^1.1.0",
     "express-session": "^1.9.1",
     "firebase": "^2.0.3",
+    "font-awesome": "^4.2.0",
     "gm": "^1.17.0",
     "googlemaps": "^0.1.20",
     "handlebars": "^2.0.0",
